syntax = "proto3";

package calculator;

option go_package = "github.com/Kreagentle/gRPC";

message CalculatorRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message CalculatorResponse {
  int32 number3 = 3;
}

service Calculator {
  rpc Calculate(CalculatorRequest) returns (CalculatorResponse);
}
